src/test/ui/typeck/typeck_type_placeholder_item.stderr
error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:4:14
   |
LL | fn test() -> _ { 5 }
   |              ^
   |              |
   |              not allowed in type signatures
   |              help: replace this with the correct return type: `i32`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:7:15
   |
LL | fn test2() -> (_, _) { (5, 5) }
   |               ^^^^^^
   |               |
   |               not allowed in type signatures
   |               help: replace this with the correct return type: `(i32, i32)`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:10:15
   |
LL | static TEST3: _ = "test";
   |               ^
   |               |
   |               not allowed in type signatures
   |               help: replace `_` with the correct type: `&'static str`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:13:15
   |
LL | static TEST4: _ = 145;
   |               ^
   |               |
   |               not allowed in type signatures
   |               help: replace `_` with the correct type: `i32`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:16:16
   |
LL | static TEST5: (_, _) = (1, 2);
   |                ^  ^ not allowed in type signatures
   |                |
   |                not allowed in type signatures

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:19:13
   |
LL | fn test6(_: _) { }
   |             ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL | fn test6<T>(_: T) { }
   |         ^^^    ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:22:18
   |
LL | fn test6_b<T>(_: _, _: T) { }
   |                  ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL | fn test6_b<T, K>(_: K, _: T) { }
   |             ^^^     ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:25:30
   |
LL | fn test6_c<T, K, L, A, B>(_: _, _: (T, K, L, A, B)) { }
   |                              ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL | fn test6_c<T, K, L, A, B, C>(_: C, _: (T, K, L, A, B)) { }
   |                         ^^^     ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:28:13
   |
LL | fn test7(x: _) { let _x: usize = x; }
   |             ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL | fn test7<T>(x: T) { let _x: usize = x; }
   |         ^^^    ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:31:22
   |
LL | fn test8(_f: fn() -> _) { }
   |                      ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL | fn test8<T>(_f: fn() -> T) { }
   |         ^^^             ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:53:8
   |
LL |     a: _,
   |        ^ not allowed in type signatures
LL |
LL |     b: (_, _),
   |         ^  ^ not allowed in type signatures
   |         |
   |         not allowed in type signatures
   |
help: use type parameters instead
   |
LL | struct Test10<T> {
LL |     a: T,
LL |
LL |     b: (T, T),
   |

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:59:21
   |
LL |     fn fn_test() -> _ { 5 }
   |                     ^
   |                     |
   |                     not allowed in type signatures
   |                     help: replace this with the correct return type: `i32`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:62:22
   |
LL |     fn fn_test2() -> (_, _) { (5, 5) }
   |                      ^^^^^^
   |                      |
   |                      not allowed in type signatures
   |                      help: replace this with the correct return type: `(i32, i32)`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:65:22
   |
LL |     static FN_TEST3: _ = "test";
   |                      ^
   |                      |
   |                      not allowed in type signatures
   |                      help: replace `_` with the correct type: `&'static str`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:68:22
   |
LL |     static FN_TEST4: _ = 145;
   |                      ^
   |                      |
   |                      not allowed in type signatures
   |                      help: replace `_` with the correct type: `i32`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:71:23
   |
LL |     static FN_TEST5: (_, _) = (1, 2);
   |                       ^  ^ not allowed in type signatures
   |                       |
   |                       not allowed in type signatures

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:74:20
   |
LL |     fn fn_test6(_: _) { }
   |                    ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     fn fn_test6<T>(_: T) { }
   |                ^^^    ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:77:20
   |
LL |     fn fn_test7(x: _) { let _x: usize = x; }
   |                    ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     fn fn_test7<T>(x: T) { let _x: usize = x; }
   |                ^^^    ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:80:29
   |
LL |     fn fn_test8(_f: fn() -> _) { }
   |                             ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     fn fn_test8<T>(_f: fn() -> T) { }
   |                ^^^             ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:102:12
   |
LL |         a: _,
   |            ^ not allowed in type signatures
LL |
LL |         b: (_, _),
   |             ^  ^ not allowed in type signatures
   |             |
   |             not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     struct FnTest10<T> {
LL |         a: T,
LL |
LL |         b: (T, T),
   |

error[E0282]: type annotations needed
  --> $DIR/typeck_type_placeholder_item.rs:107:27
   |
LL |     fn fn_test11(_: _) -> (_, _) { panic!() }
   |                           ^^^^^^ cannot infer type

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:107:27
   |
LL |     fn fn_test11(_: _) -> (_, _) { panic!() }
   |                           ^^^^^^ not allowed in type signatures

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:111:29
   |
LL |     fn fn_test12(x: i32) -> (_, _) { (x, x) }
   |                             ^^^^^^
   |                             |
   |                             not allowed in type signatures
   |                             help: replace this with the correct return type: `(i32, i32)`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:114:21
   |
LL |     fn fn_test13(x: _) -> (i32, _) { (x, x) }
   |                     ^           ^ not allowed in type signatures
   |                     |
   |                     not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     fn fn_test13<T>(x: T) -> (i32, T) { (x, x) }
   |                 ^^^    ^           ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:119:31
   |
LL |     fn method_test1(&self, x: _);
   |                               ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     fn method_test1<T>(&self, x: T);
   |                    ^^^           ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:121:31
   |
LL |     fn method_test2(&self, x: _) -> _;
   |                               ^     ^ not allowed in type signatures
   |                               |
   |                               not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     fn method_test2<T>(&self, x: T) -> T;
   |                    ^^^           ^     ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:123:31
   |
LL |     fn method_test3(&self) -> _;
   |                               ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     fn method_test3<T>(&self) -> T;
   |                    ^^^           ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:125:26
   |
LL |     fn assoc_fn_test1(x: _);
   |                          ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     fn assoc_fn_test1<T>(x: T);
   |                      ^^^    ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:127:26
   |
LL |     fn assoc_fn_test2(x: _) -> _;
   |                          ^     ^ not allowed in type signatures
   |                          |
   |                          not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     fn assoc_fn_test2<T>(x: T) -> T;
   |                      ^^^    ^     ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:129:28
   |
LL |     fn assoc_fn_test3() -> _;
   |                            ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     fn assoc_fn_test3<T>() -> T;
   |                      ^^^      ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:37:24
   |
LL |     fn test9(&self) -> _ { () }
   |                        ^
   |                        |
   |                        not allowed in type signatures
   |                        help: replace this with the correct return type: `()`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:40:27
   |
LL |     fn test10(&self, _x : _) { }
   |                           ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     fn test10<T>(&self, _x : T) { }
   |              ^^^             ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:45:24
   |
LL |     fn clone(&self) -> _ { Test9 }
   |                        ^
   |                        |
   |                        not allowed in type signatures
   |                        help: replace this with the correct return type: `Test9`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:48:37
   |
LL |     fn clone_from(&mut self, other: _) { *self = Test9; }
   |                                     ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     fn clone_from<T>(&mut self, other: T) { *self = Test9; }
   |                  ^^^                   ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:86:31
   |
LL |         fn fn_test9(&self) -> _ { () }
   |                               ^
   |                               |
   |                               not allowed in type signatures
   |                               help: replace this with the correct return type: `()`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:89:34
   |
LL |         fn fn_test10(&self, _x : _) { }
   |                                  ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL |         fn fn_test10<T>(&self, _x : T) { }
   |                     ^^^             ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:94:28
   |
LL |         fn clone(&self) -> _ { FnTest9 }
   |                            ^
   |                            |
   |                            not allowed in type signatures
   |                            help: replace this with the correct return type: `main::FnTest9`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/typeck_type_placeholder_item.rs:97:41
   |
LL |         fn clone_from(&mut self, other: _) { *self = FnTest9; }
   |                                         ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL |         fn clone_from<T>(&mut self, other: T) { *self = FnTest9; }
   |                      ^^^                   ^

error: aborting due to 38 previous errors

Some errors have detailed explanations: E0121, E0282.
For more information about an error, try `rustc --explain E0121`.
